<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:padding="16dp"
        android:layout_margin="4dp"
        android:elevation="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/rdiGroup"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rdiEasy"
                android:text="@string/easy"
                android:layout_weight="1"
                android:theme="@style/myRadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/rdiMedium"
                android:text="@string/medium"
                android:layout_weight="1"
                android:theme="@style/myRadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/rdiHard"
                android:text="@string/hard"
                android:layout_weight="1"
                android:theme="@style/myRadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </RadioGroup>

    </androidx.cardview.widget.CardView>


    <ToggleButton
        android:id="@+id/switchAlarm"
        android:textOn="@string/on"
        android:textOff="@string/off"
        android:layout_below="@+id/cardview"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



<!--    <TimePicker-->
<!--        android:id="@+id/timePicker"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/switchAlarm"-->
<!--         />-->
    <info.hoang8f.widget.FButton
        android:id="@+id/btn_save"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="5dp"

        />


</RelativeLayout>