<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutAppActivity">


    <ImageView
        android:id="@+id/about_app_image"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/welcome" />

    <TextView
        android:id="@+id/about_app_heading_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_app_image"
        android:background="@color/colorPrimary"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/what_you_need_to_know_about_the_humerus"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="#000"
        android:textStyle="bold"

        />




    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_app_heading_intro">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >



            <TextView
                android:id="@+id/my_about_app_nested_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:lineSpacingExtra="2sp"
                android:text="@string/humerus_intro_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer"/>




        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</RelativeLayout>