<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewExerciseActivity">

<!--    <TextView-->
<!--        android:id="@+id/title"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textSize="24sp"-->
<!--        android:textColor="#000"-->
<!--        android:text="@string/name_of_exercise"-->
<!--        android:background="#039BE5"-->
<!--        android:textStyle="bold"-->
<!--        android:gravity="center_vertical|center_horizontal"-->
<!--        />-->


    <ImageView
        android:id="@+id/detail_image"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_above="@+id/timer"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="@dimen/reg"
        android:layout_marginEnd="73dp"
        android:layout_marginRight="73dp"
        android:layout_marginBottom="-3dp"
        android:src="@drawable/extraction1" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_start"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="160dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_20"
        android:textSize="50sp"
        android:textStyle="bold" />

    <info.hoang8f.widget.FButton
        android:id="@+id/btn_ext_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="65dp"
        android:text="@string/text_instructions"
        android:textSize="24sp"
        android:textStyle="bold"

        />

    <info.hoang8f.widget.FButton
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="120dp"
        android:text="@string/start"
        android:textSize="24sp"
        android:textStyle="bold" />

    <info.hoang8f.widget.FButton
        android:id="@+id/btn_voice_instructions"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voice_instructions"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="10dp"

        />







</RelativeLayout>